add header info

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 	<div class="container">
+		<!-- NAVIGATION -->
 		<nav>
-			<a class="left logo" href="#"><img src="images/logo.png" alt=""></a>
+			<a class="left logo" href="#"><img src="images/logo_big.png" alt=""></a>
 			<ul class="right navigation">
 				<li>Features</li>
 				<li>About</li>
@@ -18,10 +19,36 @@
 			</ul>
 		</nav>
 
+		<!-- HEADER -->
+		<header>
+			<div class="left info">
+				<div><img src="images/logo_big.png" alt=""></div>
+				<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+				<hr>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p> 
+				<button>Download</button>
+			</div>
+			<form class="right signup">
+				
+			</form>
+		</header>
+		<div class="social"></div>
 
-		
+		<!-- BRAND BAR (SOCIAL) -->
 
+		<!-- FEATURES -->
 
+		<!-- OUR PROCESS -->
+
+		<!-- Pricing -->
+
+		<!-- Testimonials -->
+
+		<!-- Custom Section -->
+
+		<!-- Contact Us -->
+
+		<!-- FOOTER -->
 
 	</div>
 
