add header -- info & form

--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p> 
 				<button>Download</button>
 			</div>
-			<form class="right signup">
-				
+			<form class="right signup" action="" method="post" name="trialToday">
+				<p>Try Your <span>FREE</span> Trial Today</p>
+				<ul>
+					<li><input type="text" name="trialName" value="Name"></li>
+					<li><input type="email" name="trialEmail" value="Email"></li>
+					<li><input type="password" name="trialPassword" value="Password"></li>
+				</ul>
+				<button type="button" name="trialButton">Get Started</button>
 			</form>
 		</header>
-		<div class="social"></div>
+		
 
 		<!-- BRAND BAR (SOCIAL) -->
 
