add brand bar -- info & icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>free Psd 1</title>
 	<link rel="stylesheet" href="css/main_style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
@@ -39,11 +40,24 @@
 			</form>
 		</header>
 		
-
 		<!-- BRAND BAR (SOCIAL) -->
+		<div class="brandBar">
+			<div class="left brandInfo">
+				<h2>Social Media</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+			</div>
+			<div class="right brandIcons">
+				<i class="fab fa-facebook-f fa-3x"></i>
+				<i class="fab fa-twitter fa-3x"></i>
+				<i class="fab fa-google-plus-g"></i>
+				<i class="fab fa-pinterest"></i>
+				<i class="fa fa-camera-retro"></i>  <!-- version 4's syntax -->
+				<i class="fab fa-stumbleupon"></i>
+			</div>
+		</div>
 
 		<!-- FEATURES -->
-
+		
 		<!-- OUR PROCESS -->
 
 		<!-- Pricing -->
