--- a/index.html
+++ b/index.html
@@ -53,11 +53,54 @@
 				<i class="fab fa-pinterest"></i>
 				<i class="fa fa-camera-retro"></i>  <!-- version 4's syntax -->
 				<i class="fab fa-stumbleupon"></i>
+				<i class="fas fa-wifi"></i>
 			</div>
 		</div>
 
 		<!-- FEATURES -->
-		
+		<div class="features">
+			<div class="feature1">
+				<div class="left feature1Info">
+					<ul class="left">
+						<li><a href="#">Tab 1</a></li>
+						<li><a href="#">Tab 2</a></li>
+						<li><a href="#">Tab 3</a></li>
+					</ul>
+					<div class="fDescription">
+						<h2>Tabs with soft transitioning effect.</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+						<button>Download</button>
+					</div>
+				</div>
+				<div class="right feature1Image">
+					<img src="images/town.png" alt="">
+				</div>
+			</div>
+
+			<div class="feature2">
+				<div class="left feature2Image">
+					<img src="images/pic1_f_sh.png" alt="">
+				</div>
+				<div class="right feature2Info">
+					<h2>Sub list section</h2>
+					<hr>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+					<div class="title">
+						<div class="left"><i class="fas fa-cloud-upload-alt fa-3x"></i></div>
+						<h3>Title</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+					</div>
+					<div class="title">
+						<div class="left"><i class="fas fa-cloud-upload-alt fa-3x"></i></div>
+						<h3>Title</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+					</div>
+					
+				</div>
+			</div>
+
+		</div>
 		<!-- OUR PROCESS -->
 
 		<!-- Pricing -->
