pixelPerf from navBar to features 1 & 2

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<nav>
 			<a class="left logo" href="#"><img src="images/logo_big.png" alt=""></a>
 			<ul class="right navigation">
-				<li>Features</li>
-				<li>About</li>
-				<li>Pricing</li>
-				<li>Reviews</li>
-				<li>Contact</li>
+				<li><a href="#">Features</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Pricing</a></li>
+				<li><a href="#">Reviews</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 
@@ -49,11 +49,11 @@
 			<div class="right brandIcons">
 				<i class="fab fa-facebook-f fa-3x"></i>
 				<i class="fab fa-twitter fa-3x"></i>
-				<i class="fab fa-google-plus-g"></i>
-				<i class="fab fa-pinterest"></i>
-				<i class="fa fa-camera-retro"></i>  <!-- version 4's syntax -->
-				<i class="fab fa-stumbleupon"></i>
-				<i class="fas fa-wifi"></i>
+				<i class="fab fa-google-plus-g fa-3x"></i>
+				<i class="fab fa-pinterest fa-3x"></i>
+				<i class="fa fa-camera-retro fa-3x"></i>  <!-- version 4's syntax -->
+				<i class="fab fa-stumbleupon fa-3x"></i>
+				<i class="fas fa-wifi fa-3x"></i>
 			</div>
 		</div>
 
@@ -87,14 +87,16 @@
 					<hr>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
 					<div class="title">
-						<div class="left"><i class="fas fa-cloud-upload-alt fa-3x"></i></div>
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
-					</div>
-					<div class="title">
-						<div class="left"><i class="fas fa-cloud-upload-alt fa-3x"></i></div>
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+						<div class="titleItem">
+							<div class="left"><i class="fas fa-cloud-upload-alt "></i></div>
+							<h3>Title</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+						</div>
+						<div class="titleItem">
+							<div class="left"><i class="fas fa-cloud-upload-alt"></i></div>
+							<h3>Title</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+						</div>
 					</div>
 					
 				</div>
