change unit of measure px --> vw -- nav, info

--- a/index.html
+++ b/index.html
@@ -2,46 +2,51 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>free Psd 1</title>
-	<link rel="stylesheet" href="css/main_style.css">
+	<title>free Psd AXIT</title>
+	<linc rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
 		<!-- NAVIGATION -->
 		<nav>
-			<a class="left logo" href="#"><img src="images/logo_big.png" alt=""></a>
-			<ul class="right navigation">
-				<li><a href="#">Features</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Pricing</a></li>
-				<li><a href="#">Reviews</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
+			<div class="content">
+				<a class="logo" href="#"><img src="images/logo_big.png" alt=""></a>
+				<ul class="navigation">
+					<li><a href="#">Features</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Pricing</a></li>
+					<li><a href="#">Reviews</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
 		</nav>
 
 		<!-- HEADER -->
 		<header>
-			<div class="left info">
-				<div><img src="images/logo_big.png" alt=""></div>
-				<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
-				<hr>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p> 
-				<button>Download</button>
+			<div class="content">
+				<div class="info">
+					<div class="logo_big"><img src="images/logo_big.png" alt=""></div>
+					<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+					<div class="title_line"></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p> 
+					<button>Download</button>
+				</div>
+				<form class="sign_up" action="" method="post" name="trialToday">
+					<p>Try Your <span>FREE</span> Trial Today</p>
+					<ul>
+						<li><input type="text" name="trialName" value="Name"></li>
+						<li><input type="email" name="trialEmail" value="Email"></li>
+						<li><input type="password" name="trialPassword" value="Password"></li>
+					</ul>
+					<button type="button" name="trialButton">Get Started</button>
+				</form>
 			</div>
-			<form class="right signup" action="" method="post" name="trialToday">
-				<p>Try Your <span>FREE</span> Trial Today</p>
-				<ul>
-					<li><input type="text" name="trialName" value="Name"></li>
-					<li><input type="email" name="trialEmail" value="Email"></li>
-					<li><input type="password" name="trialPassword" value="Password"></li>
-				</ul>
-				<button type="button" name="trialButton">Get Started</button>
-			</form>
 		</header>
 		
 		<!-- BRAND BAR (SOCIAL) -->
-		<div class="brandBar">
+		<!-- <section class="brandBar">
 			<div class="left brandInfo">
 				<h2>Social Media</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
@@ -51,14 +56,14 @@
 				<i class="fab fa-twitter fa-3x"></i>
 				<i class="fab fa-google-plus-g fa-3x"></i>
 				<i class="fab fa-pinterest fa-3x"></i>
-				<i class="fa fa-camera-retro fa-3x"></i>  <!-- version 4's syntax -->
+				<i class="fa fa-camera-retro fa-3x"></i>  --> <!-- version 4's syntax
 				<i class="fab fa-stumbleupon fa-3x"></i>
 				<i class="fas fa-wifi fa-3x"></i>
 			</div>
-		</div>
+		</section> -->
 
 		<!-- FEATURES -->
-		<div class="features">
+		<!-- <div class="features">
 			<div class="feature1">
 				<div class="left feature1Info">
 					<ul class="left">
@@ -102,7 +107,7 @@
 				</div>
 			</div>
 
-		</div>
+		</div> -->
 		<!-- OUR PROCESS -->
 
 		<!-- Pricing -->
